{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 193,
  "lineage": "de0f5f21-9ff0-88f5-14c0-fa95e465a9d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-066784287e358dad1",
            "arn": "arn:aws:ec2:us-east-1:658583055396:instance/i-0001e9c7dd5c8e086",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0001e9c7dd5c8e086",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dc8ea0ec87101d03",
            "private_dns": "ip-10-10-0-103.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.103",
            "public_ip": "44.211.28.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0352ffa9e6303054e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fded2041bb9ab97c",
            "tags": {
              "Name": "apache-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_VERSION": "1.9.4",
              "Name": "apache-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "dparedes",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0372f1df60db30743"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658583055396:internet-gateway/igw-0fd6abed964d22aa2",
            "id": "igw-0fd6abed964d22aa2",
            "owner_id": "658583055396",
            "tags": {
              "Name": "igw vpc virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_VERSION": "1.9.4",
              "Name": "igw vpc virginia-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "dparedes",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0660726a92032047d"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658583055396:route-table/rtb-0955de5e1c4d6cf5b",
            "id": "rtb-0955de5e1c4d6cf5b",
            "owner_id": "658583055396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd6abed964d22aa2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_VERSION": "1.9.4",
              "Name": "public crt-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "dparedes",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660726a92032047d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db6c9901f1cc1ae2",
            "route_table_id": "rtb-0955de5e1c4d6cf5b",
            "subnet_id": "subnet-0fded2041bb9ab97c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658583055396:security-group/sg-0372f1df60db30743",
            "description": "Allow SSH inbound traffic and ALL egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0372f1df60db30743",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH over internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http over internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https over internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Public Instance SG",
            "name_prefix": "",
            "owner_id": "658583055396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_VERSION": "1.9.4",
              "Name": "Public Instance SG-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "dparedes",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0660726a92032047d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658583055396:subnet/subnet-05dcb49a91fbe3417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05dcb49a91fbe3417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "658583055396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_VERSION": "1.9.4",
              "Name": "private-subnet-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "dparedes",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0660726a92032047d"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658583055396:subnet/subnet-0fded2041bb9ab97c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fded2041bb9ab97c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "658583055396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_VERSION": "1.9.4",
              "Name": "public-subnet-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "dparedes",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0660726a92032047d"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:658583055396:vpc/vpc-0660726a92032047d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b8ddbf99d01b1e3e",
            "default_route_table_id": "rtb-0504215e235466fe5",
            "default_security_group_id": "sg-06cfb97274ca8cf6b",
            "dhcp_options_id": "dopt-0db0e2f93fada4de6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0660726a92032047d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0504215e235466fe5",
            "owner_id": "658583055396",
            "tags": {
              "Name": "vpc-virginia-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_VERSION": "1.9.4",
              "Name": "vpc-virginia-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "dparedes",
              "project": "cerberus",
              "region": "virginia"
            }
          }
        }
      ]
    }
  ]
}